legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr25801.c-4.8.2-3.out.txt
pr25801.c: In function ‘f’:
pr25801.c:13:4: error: increment of pointer to unknown structure
   a++;  
    ^
pr25801.c:13:3: error: arithmetic on pointer to an incomplete type
   a++;  
   ^
pr25801.c:14:3: error: increment of pointer to unknown structure
   ++a;  
   ^
pr25801.c:14:3: error: arithmetic on pointer to an incomplete type
pr25801.c:15:4: error: decrement of pointer to unknown structure
   a--;  
    ^
pr25801.c:15:3: error: arithmetic on pointer to an incomplete type
   a--;  
   ^
pr25801.c:16:3: error: decrement of pointer to unknown structure
   --a;  
   ^
pr25801.c:16:3: error: arithmetic on pointer to an incomplete type
pr25801.c:17:3: error: invalid use of array with unspecified bounds
   a += 1;  
   ^
pr25801.c:18:3: error: invalid use of array with unspecified bounds
   a -= 1;  
   ^
pr25801.c:19:5: error: arithmetic on pointer to an incomplete type
   a - a;  
     ^
pr25801.c:19:3: error: arithmetic on pointer to an incomplete type
   a - a;  
   ^
pr25801.c:21:4: error: increment of pointer to unknown structure
   s++;  
    ^
pr25801.c:21:3: error: arithmetic on pointer to an incomplete type
   s++;  
   ^
pr25801.c:22:3: error: increment of pointer to unknown structure
   ++s;  
   ^
pr25801.c:22:3: error: arithmetic on pointer to an incomplete type
pr25801.c:23:4: error: decrement of pointer to unknown structure
   s--;  
    ^
pr25801.c:23:3: error: arithmetic on pointer to an incomplete type
   s--;  
   ^
pr25801.c:24:3: error: decrement of pointer to unknown structure
   --s;  
   ^
pr25801.c:24:3: error: arithmetic on pointer to an incomplete type
pr25801.c:25:3: error: invalid use of undefined type ‘struct S’
   s += 1;  
   ^
pr25801.c:26:3: error: invalid use of undefined type ‘struct S’
   s -= 1;  
   ^
pr25801.c:27:5: error: arithmetic on pointer to an incomplete type
   s - s;  
     ^
pr25801.c:27:3: error: arithmetic on pointer to an incomplete type
   s - s;  
   ^
pr25801.c:29:4: error: increment of pointer to unknown structure
   u++;  
    ^
pr25801.c:29:3: error: arithmetic on pointer to an incomplete type
   u++;  
   ^
pr25801.c:30:3: error: increment of pointer to unknown structure
   ++u;  
   ^
pr25801.c:30:3: error: arithmetic on pointer to an incomplete type
pr25801.c:31:4: error: decrement of pointer to unknown structure
   u--;  
    ^
pr25801.c:31:3: error: arithmetic on pointer to an incomplete type
   u--;  
   ^
pr25801.c:32:3: error: decrement of pointer to unknown structure
   --u;  
   ^
pr25801.c:32:3: error: arithmetic on pointer to an incomplete type
pr25801.c:33:3: error: invalid use of undefined type ‘union U’
   u += 1;  
   ^
pr25801.c:34:3: error: invalid use of undefined type ‘union U’
   u -= 1;  
   ^
pr25801.c:35:5: error: arithmetic on pointer to an incomplete type
   u - u;  
     ^
pr25801.c:35:3: error: arithmetic on pointer to an incomplete type
   u - u;  
   ^
pr25801.c:37:4: error: increment of pointer to unknown structure
   e++;  
    ^
pr25801.c:37:3: error: arithmetic on pointer to an incomplete type
   e++;  
   ^
pr25801.c:38:3: error: increment of pointer to unknown structure
   ++e;  
   ^
pr25801.c:38:3: error: arithmetic on pointer to an incomplete type
pr25801.c:39:4: error: decrement of pointer to unknown structure
   e--;  
    ^
pr25801.c:39:3: error: arithmetic on pointer to an incomplete type
   e--;  
   ^
pr25801.c:40:3: error: decrement of pointer to unknown structure
   --e;  
   ^
pr25801.c:40:3: error: arithmetic on pointer to an incomplete type
pr25801.c:41:3: error: invalid use of undefined type ‘enum E’
   e += 1;  
   ^
pr25801.c:42:3: error: invalid use of undefined type ‘enum E’
   e -= 1;  
   ^
pr25801.c:43:5: error: arithmetic on pointer to an incomplete type
   e - e;  
     ^
pr25801.c:43:3: error: arithmetic on pointer to an incomplete type
   e - e;  
   ^
